# allium

./: .gitignore  BENCHMARK.md  Cargo.toml  Makefile  deny.toml  fix_history.sh  restore_timestamps.sh  rg35xxsp.mk
.github/workflows/: nightly.yml
buildroot-external/: Config.in  external.desc  external.mk
buildroot-external/board/rg35xxsp/: boot.cmd  busybox.config  genimage.cfg  linux.config  post-build.sh  post-image.sh
buildroot-external/configs/: allium_rg35xxsp_defconfig
buildroot-external/package/allium/: Config.in  allium.mk
buildroot-external/package/allium-support/: Config.in  libretro-core.mkfrag
buildroot-external/package/bootsplash/: Config.in  bootsplash.mk
buildroot-external/package/libretro-common/: Config.in  libretro-common.hash  libretro-common.mk
buildroot-external/package/libretro-fake08/: Config.in  README.md  libretro-fake08.mk
buildroot-external/package/libretro-fceumm/: Config.in  README.md  libretro-fceumm.mk
buildroot-external/package/libretro-gambatte/: Config.in  README.md  libretro-gambatte.mk
buildroot-external/package/libretro-gpsp/: Config.in  README.md  libretro-gpsp.mk
buildroot-external/package/libretro-mednafen-pce-fast/: Config.in  README.md  libretro-mednafen-pce-fast.mk
buildroot-external/package/libretro-mednafen-supafaust/: Config.in  README.md  libretro-mednafen-supafaust.mk
buildroot-external/package/libretro-mednafen-vb/: Config.in  README.md  libretro-mednafen-vb.mk
buildroot-external/package/libretro-mgba/: Config.in  README.md  libretro-mgba.mk
buildroot-external/package/libretro-pcsx-rearmed/: Config.in  README.md  libretro-pcsx-rearmed.mk
buildroot-external/package/libretro-picodrive/: Config.in  README.md  libretro-picodrive.mk
buildroot-external/package/libretro-pokemini/: Config.in  README.md  libretro-pokemini.mk
buildroot-external/package/libretro-race/: Config.in  README.md  libretro-race.mk
buildroot-external/package/libretro-snes9x2005-plus/: Config.in  README.md  libretro-snes9x2005-plus.mk
buildroot-external/package/minui/: Config.in  minui.mk
buildroot-external/package/remotectl/: Config.in  README.md  remotectl.mk
crates/activity-tracker/: Cargo.toml
crates/allium-launcher/: Cargo.toml
crates/allium-launcher/src/: allium_launcher.rs  consoles.rs  main.rs  ota.rs
crates/allium-menu/: Cargo.toml
crates/allium-menu/src/: allium_menu.rs  main.rs
crates/allium-menu/src/view/: ingame_menu.rs  mod.rs  play_menu.rs
crates/alliumd/: Cargo.toml
crates/alliumd/src/: alliumd.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: constants.rs  database.rs  lib.rs  (+4 more)
crates/libretro/: Cargo.toml  build.rs
crates/play/: Cargo.toml
crates/play/src/: args.rs  audio.rs  callbacks.rs  commands.rs  config.rs  content.rs  control.rs  controls.rs  core.rs  core_options.rs  diagnostics.rs  dump.rs  frame.rs  hud.rs  input.rs  libretro_sys.rs  logs.rs  main.rs  miyoo_env.rs  miyoo_video.rs  paths.rs  platform.rs  save.rs  scale.rs  session.rs  settings.rs  simulator_video.rs  timing.rs  udp.rs  unzip.rs  video.rs
crates/play/src/platform/: mod.rs
crates/play/src/platform/minime/: audio.rs  mod.rs  stats.rs  video.rs
crates/play/src/platform/miyoo/: audio.rs  env.rs  mod.rs  stats.rs  video.rs
crates/play/src/platform/mock/: audio.rs  mod.rs  stats.rs  video.rs
crates/play/src/platform/rg35xxsp/: audio.rs  mod.rs  stats.rs  video.rs
crates/play/src/platform/simulator/: audio.rs  mod.rs  stats.rs  video.rs
crates/play/src/session/: tests.rs
crates/play/src/video/: convert.rs  effects.rs  frame.rs  hud.rs  miyoo.rs  mod.rs  pixel.rs  ppm.rs  scale.rs  simulator.rs  tests.rs
crates/screenshot-viewer/: Cargo.toml
docs/: Full_Porting_Strategy.md  LIBRARIES.md  PLAN.md  PLAN_SETTINGS.md  PLAYBOOK.md  PORT.md  TODO.md
scripts/: build-sp-payload.sh  flash-bootloader.command  setup-mac.sh
(+111 files in other folders)
