[package]
name = "play"
version = "0.1.0"
edition = "2024"

[features]
simulator = ["common/simulator", "cpal", "softbuffer", "winit"]
miyoo = ["common/miyoo", "framebuffer"]
rg35xxsp = ["common/rg35xxsp", "framebuffer"]

[dependencies]
common = { path = "../common" }
anyhow.workspace = true
log.workspace = true
libloading = "0.8.9"
nix = { workspace = true, features = ["fs"] }
ringbuf = "0.4.8"
serde = { workspace = true, features = ["derive"] }
simple_logger.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
cpal = { version = "0.15.3", optional = true }
framebuffer = { workspace = true, optional = true }
softbuffer = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
