[package]
name = "play"
version = "0.1.0"
edition = "2024"

[features]
minime = ["common/minime", "framebuffer", "evdev", "futures"]

[dependencies]
common = { path = "../common" }
anyhow.workspace = true
chrono.workspace = true
log.workspace = true
libloading = "0.8.9"
libc = "0.2"
nix = { workspace = true, features = ["fs"] }
ringbuf = "0.4.8"
serde = { workspace = true, features = ["derive"] }
simple_logger.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
clap = { workspace = true, features = ["derive"] }
framebuffer = { workspace = true, optional = true }
libretro = { path = "../libretro" }
evdev = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
